--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   frontend:
+    image: ghcr.io/benbjd/meowify-web:latest
     ports:
       - "3000:3000"
     environment:
